--- a/AudioAdjustView/app/src/main/res/layout/activity_main.xml
+++ b/AudioAdjustView/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+<!--    <LinearLayout-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        android:background="@drawable/ios_column_audio_view_background_outside"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="400dp">-->
+
+<!--        </LinearLayout>-->
+
     <com.yfz.main.View.IosColumnAudioView
         app:IosColumnAudioView_setBackgroundInSide="@drawable/ios_column_audio_view_background_inside"
         app:IosColumnAudioView_setBackgroundOutSide="@drawable/ios_column_audio_view_background_outside"
+        android:layout_width="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="50dp"
-        android:layout_height="400dp">
+        android:layout_height="200dp">
     </com.yfz.main.View.IosColumnAudioView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
