--- a/AudioAdjustView/app/src/main/res/values/attrs.xml
+++ b/AudioAdjustView/app/src/main/res/values/attrs.xml
@@ -4,5 +4,21 @@
         name="IosColumnAudioView">
         <attr name="IosColumnAudioView_setBackgroundOutSide" format="reference|color"></attr>
         <attr name="IosColumnAudioView_setBackgroundInSide" format="reference|color"></attr>
+        <attr name="IosColumnAudioView_setAudioStreamType"   format="reference|color">
+            <enum name="STREAM_DEFAULT" value="-1"></enum>
+            <enum name="STREAM_VOICE_CALL" value="0"></enum>
+            <enum name="STREAM_SYSTEM" value="1"></enum>
+            <enum name="STREAM_RING" value="2"></enum>
+            <enum name="STREAM_MUSIC" value="3"></enum>
+            <enum name="STREAM_ALARM" value="4"></enum>
+            <enum name="STREAM_NOTIFICATION" value="5"></enum>
+            <enum name="STREAM_BLUETOOTH_SCO" value="6"></enum>
+            <enum name="STREAM_SYSTEM_ENFORCED" value="7"></enum>
+            <enum name="STREAM_DTMF" value="8"></enum>
+            <enum name="STREAM_TTS" value="9"></enum>
+            <enum name="STREAM_ACCESSIBILITY" value="10"></enum>
+            <enum name="STREAM_ASSISTANT" value="11"></enum>
+        </attr>
+
     </declare-styleable>
 </resources>
