--- a/AudioAdjustView/app/src/main/res/layout/activity_main.xml
+++ b/AudioAdjustView/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,14 @@
 <!--        </LinearLayout>-->
 
     <com.yfz.main.View.IosColumnAudioView
-        app:IosColumnAudioView_setBackgroundInSide="@drawable/ios_column_audio_view_background_inside"
-        app:IosColumnAudioView_setBackgroundOutSide="@drawable/ios_column_audio_view_background_outside"
-        android:layout_width="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:iosColumnAudioView_setColorLoud="@color/colorLoud"
+        app:iosColumnAudioView_setColorBackground="@color/colorBackground"
+        app:iosColumnAudioView_setRadiusXY="@dimen/ios_column_audio_view_radius"
+        android:layout_width="50dp"
         android:layout_height="200dp">
     </com.yfz.main.View.IosColumnAudioView>
 </androidx.constraintlayout.widget.ConstraintLayout>
