--- a/AudioAdjustView/app/src/main/res/values/colors.xml
+++ b/AudioAdjustView/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="background_outside">#898989</color>
-    <color name="background_inside">#ECECEC</color>
+    <color name="colorBackground">#898989</color>
+    <color name="colorLoud">#ECECEC</color>
 
 </resources>
