--- a/AudioAdjustView/app/src/main/res/values/attrs.xml
+++ b/AudioAdjustView/app/src/main/res/values/attrs.xml
@@ -5,6 +5,8 @@
         <attr name="iosColumnAudioView_setColorBackground" format="color"></attr>
         <attr name="iosColumnAudioView_setColorLoud" format="color"></attr>
         <attr name="iosColumnAudioView_setRadiusXY" format="dimension"></attr>
+        <attr name="iosColumnAudioView_setTextSize" format="dimension"></attr>
+        <attr name="iosColumnAudioView_setTextColor" format="color"></attr>
         <attr name="iosColumnAudioView_setAudioStreamType"   format="integer">
             <enum name="STREAM_DEFAULT" value="-1"></enum>
             <enum name="STREAM_VOICE_CALL" value="0"></enum>
