--- a/AudioAdjustView/app/src/main/res/values/colors.xml
+++ b/AudioAdjustView/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBackground">#898989</color>
     <color name="colorLoud">#ECECEC</color>
+    <color name="colorTransparent">#00000000</color>
 
 </resources>
