--- a/AudioAdjustView/app/src/main/res/layout/activity_main.xml
+++ b/AudioAdjustView/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <com.yfz.main.View.IosColumnAudioView
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -16,4 +18,5 @@
         android:layout_width="50dp"
         android:layout_height="200dp">
     </com.yfz.main.View.IosColumnAudioView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
