add control drawText value

--- a/AudioAdjustView/app/src/main/res/values/attrs.xml
+++ b/AudioAdjustView/app/src/main/res/values/attrs.xml
@@ -8,6 +8,7 @@
         <attr name="iosColumnAudioView_setTextSize" format="dimension"></attr>
         <attr name="iosColumnAudioView_setTextColor" format="color"></attr>
         <attr name="iosColumnAudioView_setTextHeight" format="integer|dimension"></attr>
+        <attr name="iosColumnAudioView_setIsDrawTextVolume" format="boolean"></attr>
         <attr name="iosColumnAudioView_setAudioStreamType"   format="integer">
             <enum name="STREAM_DEFAULT" value="-1"></enum>
             <enum name="STREAM_VOICE_CALL" value="0"></enum>
