--- a/AudioAdjustView/app/src/main/res/layout/activity_main.xml
+++ b/AudioAdjustView/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.yfz.main.View.IosColumnAudioView
+    <com.yfz.main.IosColumnAudioView
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -15,8 +15,9 @@
         app:iosColumnAudioView_setColorLoud="@color/colorLoud"
         app:iosColumnAudioView_setColorBackground="@color/colorBackground"
         app:iosColumnAudioView_setRadiusXY="@dimen/ios_column_audio_view_radius"
+        app:iosColumnAudioView_setVolumeDrawable="@drawable/icon_banAudio"
         android:layout_width="50dp"
         android:layout_height="200dp">
-    </com.yfz.main.View.IosColumnAudioView>
+    </com.yfz.main.IosColumnAudioView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
