--- a/AudioAdjustView/app/src/main/res/layout/activity_main.xml
+++ b/AudioAdjustView/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:iosColumnAudioView_setColorLoud="@color/colorLoud"
         app:iosColumnAudioView_setColorBackground="@color/colorBackground"
         app:iosColumnAudioView_setRadiusXY="@dimen/ios_column_audio_view_radius"
-        app:iosColumnAudioView_setVolumeDrawable="@drawable/icon_banAudio"
+        app:iosColumnAudioView_setVolumeDrawable="@drawable/icon_ban_audio"
         android:layout_width="50dp"
         android:layout_height="200dp">
     </com.yfz.main.IosColumnAudioView>
